bynkc/tests/fixtures/negative/237_invariant_duplicate/src/demo/a.bynk
context demo.a

agent Counter {
  key id: String

  store count: Cell[Int]

  invariant dup:
    count >= 0
  invariant dup:
    count < 100

  on call bump() -> Effect[()] {
    let cur = count
    count := cur + 1
    ()
  }
}
